--- a/styles/g.css
+++ b/styles/g.css
@@ -1,7 +1,52 @@
+.body{
+    margin: 0;
+}
+.header{
+    margin: 10px 55pt;
+}
+.header.ds-fixed-header {
+    padding: 20px 0;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+}
+
+.header-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo {
+    text-transform: uppercase;
+    font-size: 26px;
+    letter-spacing: 4px;
+    color: #000;
+    display: flex;
+    align-items: center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.logo span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    background-color: #000;
+    border-radius: 4px;
+    color: #FFF;
+    font-size: 22px;
+    font-weight: 600;
+    text-align: center;
+    margin-right: 12px;
+    
+}
+
+.logo:hover {
+    color: #000;
+}
 .H1{
-    margin: 5pt 35pt ;
-    font-size:400%;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 10pt 50pt ;
+    font-size:300%;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 .text{
     margin: 0pt 50pt;
@@ -45,11 +90,116 @@
     display: inline-block;
     color: #000000;
     font-size: 16px;
-    padding: 20px 20px;
+    padding: 10px 30px;
     background-color: #FFF;
-    border: 2px solid #4453b7;
-    border-radius: 25px;
-    margin-right: 15px;
+    border: 2px solid #21767b;
+    border-radius: 20px;
+    margin-right: 0px;
     margin-bottom: 20px;
     font-weight: 500;
 }
+
+
+
+.row {
+    text-transform: uppercase;
+    display: flex;
+    
+}
+
+
+.contact{
+    margin: 20pt 50pt ;
+}
+
+.form-group label {
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    color: #000000;
+    font-size: 16px;
+    padding: 10px 30px;
+    background-color: rgb(169, 216, 221);
+    border-radius: 5px;
+    margin-right: 0px;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.form-group input{
+    border-radius: 5px;
+    background-color: rgb(243, 246, 255);
+    border: 2px solid #000000;
+    border-radius: 3px;
+    margin-right: 15px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    
+}
+
+.form-group textarea {
+    border-radius: 5px;
+    background-color: rgb(243, 246, 255);
+    border: 2px solid #000000;
+    border-radius: 3px;
+    margin-right: 15px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    
+}
+
+
+.footer-distributed {
+    width: 100%;
+    display: inline-block;
+    text-decoration: underline;
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    text-align: left;
+    font: normal 16px sans-serif;
+    padding: 45px 50px;
+}
+.footer-distributed .footer-left p {
+    color: #8f9296;
+    font-size: 14px;
+    margin: 0;
+}
+/* Footer links */
+
+.footer-distributed p.footer-links {
+    font-size: 18px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0 0 10px;
+    padding: 0;
+    transition: ease .25s;
+    text-transform: uppercase;
+}
+
+.footer-distributed p.footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+    transition: ease .25s;
+}
+
+.footer-distributed .footer-links a:before {
+    content: "·";
+    font-size: 20px;
+    left: 0;
+    color: #fff;
+    display: inline-block;
+    padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+    content: none;
+}
+
+.footer-distributed .footer-right {
+    float: right;
+    margin-top: 6px;
+    max-width: 180px;
+}
+
